@@ -722,4 +722,6 @@
 /^#[^\x{ffff}]#[^\x{ffff}]#[^\x{ffff}]#/8
     #\x{10000}#\x{100}#\x{10ffff}#
 
+"[\S\V\H]"8
+
 /-- End of testinput4 --/
